Added UI files in a folder.

--- a/ArbolitoU/ArbolitoU.csproj
+++ b/ArbolitoU/ArbolitoU.csproj
@@ -7,4 +7,16 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="WPF-UI" Version="3.0.0-preview.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Page Update="UI\MainWindow.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+    </ItemGroup>
+
 </Project>
