Added more stuff to UI

--- a/ArbolitoU/ArbolitoU.csproj
+++ b/ArbolitoU/ArbolitoU.csproj
@@ -19,4 +19,9 @@
       </Page>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Pages\Map Tools\YTYP" />
+      <Folder Include="Pages\Misc Tools" />
+    </ItemGroup>
+
 </Project>
