--- a/ArbolitoU/ArbolitoU.csproj
+++ b/ArbolitoU/ArbolitoU.csproj
@@ -5,9 +5,16 @@
         <TargetFramework>net7.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
+        <Version>0.0.1</Version>
+        <Authors>MrVicho13</Authors>
+        <Description>Next-generation Modding Tool for GTA V</Description>
+        <SignAssembly>true</SignAssembly>
+        <AssemblyOriginatorKeyFile>TrueKEY.snk</AssemblyOriginatorKeyFile>
+        <PublicSign>true</PublicSign>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
       <PackageReference Include="WPF-UI" Version="3.0.0-preview.1" />
     </ItemGroup>
 
@@ -21,6 +28,28 @@
 
     <ItemGroup>
       <Folder Include="Pages\MiscTools" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="CodeWalker.Core">
+        <HintPath>..\..\..\Downloads\CodeWalker30_dev44\CodeWalker30_dev44\CodeWalker.Core.dll</HintPath>
+      </Reference>
+      <Reference Include="SharpDX.Mathematics">
+        <HintPath>..\..\..\Downloads\CodeWalker30_dev44\CodeWalker30_dev44\SharpDX.Mathematics.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Images\github-mark-white.png" />
+      <Content Include="Images\github-mark-white.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <None Remove="Images\oos.png" />
+      <None Remove="Images\bermuda-traingle.svg" />
+      <None Remove="Images\bermuda-traingle.png" />
+      <Content Include="Images\bermuda-traingle.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
