--- a/ArbolitoU/ArbolitoU.csproj
+++ b/ArbolitoU/ArbolitoU.csproj
@@ -7,6 +7,13 @@
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
         <LangVersion>12</LangVersion>
+        <Company>MrVicho Software</Company>
+        <AssemblyVersion>0.0.1</AssemblyVersion>
+        <FileVersion>0.0.1</FileVersion>
+        <SignAssembly>true</SignAssembly>
+        <AssemblyOriginatorKeyFile>new.snk</AssemblyOriginatorKeyFile>
+        <PublicSign>true</PublicSign>
+        <ApplicationIcon>icon-512.ico</ApplicationIcon>
     </PropertyGroup>
 
 
@@ -20,7 +27,6 @@
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.6" />
         <PackageReference Include="FluentAvalonia.FluentIcons" Version="1.1.201" />
         <PackageReference Include="FluentAvaloniaUI" Version="2.0.4" />
-        <PackageReference Include="MessageBox.Avalonia" Version="3.1.5.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.0" />
@@ -41,6 +47,14 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </AvaloniaResource>
       <None Remove="CustomFonts\Nunito-Regular.ttf" />
+      <None Remove="icon-512.ico" />
+      <AvaloniaResource Include="icon-512.ico">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </AvaloniaResource>
+      <None Remove="icon-512.png" />
+      <AvaloniaResource Include="icon-512.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </AvaloniaResource>
     </ItemGroup>
 
 
