--- a/ArbolitoU/ArbolitoU.csproj
+++ b/ArbolitoU/ArbolitoU.csproj
@@ -84,10 +84,10 @@
 
     <ItemGroup>
       <Reference Include="CodeWalker.Core">
-        <HintPath>..\..\..\..\..\Downloads\CodeWalker30_dev46\CodeWalker.Core.dll</HintPath>
+        <HintPath>..\..\..\Downloads\CodeWalker30_dev46\CodeWalker.Core.dll</HintPath>
       </Reference>
       <Reference Include="SharpDX.Mathematics">
-        <HintPath>..\..\..\..\..\Downloads\CodeWalker30_dev46\SharpDX.Mathematics.dll</HintPath>
+        <HintPath>..\..\..\Downloads\CodeWalker30_dev46\SharpDX.Mathematics.dll</HintPath>
       </Reference>
     </ItemGroup>
 </Project>
